# Klaudex

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY_AUDIT.md  SKILLS_SECURITY_AUDIT.md  activity.md  agents-lock.json  bundle-budget.json  bunfig.toml  downloads.json  index.html  package.json  tailwind.css  todo.md  ux-review-button-consistency.md  ux-review-light-mode-theme.md  vite.config.ts  vitest.config.ts
.bun-test-noop/: redirect.test.ts
.plans/: update-kirodex.md
.ralph/: prompt.md
src-tauri/: Cargo.toml  Info.plist  Klaudex.entitlements  activity.md  tauri.ci.conf.json  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: git_ai_smoke.rs
src-tauri/icons/dev/: icon.icns
src-tauri/icons/prod/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: acp.rs  analytics.rs  branch_ai.rs  checkpoint.rs  claude_config.rs  claude_watcher.rs  diff_parse.rs  diff_stats.rs  error.rs  fs_ops.rs  fuzzy.rs  git.rs  git_ai.rs  git_history.rs  git_pr.rs  git_stack.rs  git_utils.rs  highlight.rs  kiro_config.rs  kiro_watcher.rs  markdown.rs  mod.rs  pattern_extract.rs  permissions.rs  pr_ai.rs  process_diagnostics.rs  project_watcher.rs  pty.rs  retry.rs  serde_utils.rs  settings.rs  statusline.rs  streaming_diff.rs  thread_db.rs  thread_title.rs  tracing.rs  transport.rs  vcs_status.rs
src-tauri/src/commands/acp/: claude_types.rs  client.rs  commands.rs  connection.rs  mod.rs  sandbox.rs  tests.rs  types.rs
src-tauri/tests/: claude_cli_integration.rs
(+459 files in other folders)
