[package]
name = "klaudex"
version = "0.1.0"
edition = "2021"

[lib]
name = "klaudex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "klaudex"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "time", "process"] }
base64 = "0.22"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
log = "0.4"
open = "5"
ignore = "0.4"
window-vibrancy = "0.6"
tauri-plugin-log = "2"
git2 = { version = "0.20", features = ["ssh", "https"] }
thiserror = "2"
which = "7"
confy = "0.6"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
parking_lot = "0.12"
imagesize = "0.13"

[dev-dependencies]
tempfile = "3"
wait-timeout = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 2
panic = "abort"

[profile.dev.package."*"]
opt-level = 2


[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2"
